# vulkan-tutorial-vertex-buffers

./: .gitignore  Build_Debug.bat  Build_MinSizeRel.bat  Build_RelWithDebInfo.bat  Build_Release.bat  CMakeLists.txt  GenerateProjectFiles.bat  HotReload.bat  README.md
01.BaseCode/: README.md
01.BaseCode/Source/: VkApp.cpp  VkApp.h
02.Instance/: CMakeLists.txt  README.md
03.ValidationLayers/: README.md
03.ValidationLayers/Source/: VkApp.cpp  VkApp.h
04.PhysicalDevicesAndQueueFamilies/: CMakeLists.txt  README.md
05.LogicalDeviceAndQueues/: README.md
05.LogicalDeviceAndQueues/Source/: VkApp.h
06.WindowSurface/: CMakeLists.txt  README.md
06.WindowSurface/Source/: VkApp.h
07.SwapChain/: README.md
07.SwapChain/Source/: VkApp.cpp  VkApp.h
08.ImageViews/: CMakeLists.txt  README.md
09.Introduction/: CMakeLists.txt  README.md
09.Introduction/Source/: VkApp.cpp
1. Drawing a triangle/: CMakeLists.txt
1. Drawing a triangle/1.1.Setup/: CMakeLists.txt
1. Drawing a triangle/1.1.Setup/1.1.2.Instance/Source/: VkApp.h
1. Drawing a triangle/1.1.Setup/1.1.3.ValidationLayers/: README.md
1. Drawing a triangle/1.1.Setup/1.1.3.ValidationLayers/Source/: VkApp.cpp
1. Drawing a triangle/1.1.Setup/1.1.5.LogicalDeviceAndQueues/: CMakeLists.txt
1. Drawing a triangle/1.2.Presentation/: CMakeLists.txt
1. Drawing a triangle/1.2.Presentation/1.2.1.WindowSurface/: CMakeLists.txt
1. Drawing a triangle/1.3.GraphicsPipelineeBasics/: CMakeLists.txt
1.Drawing a triangle/: CMakeLists.txt
1.Drawing a triangle/1.1.Setup/: CMakeLists.txt
1.Drawing a triangle/1.1.Setup/1.1.2.Instance/: README.md
1.Drawing a triangle/1.1.Setup/1.1.3.ValidationLayers/: README.md
1.Drawing a triangle/1.1.Setup/1.1.4.PhysicalDevicesAndQueueFamilies/: README.md
1.Drawing a triangle/1.2.Presentation/: CMakeLists.txt
1.Drawing a triangle/1.2.Presentation/1.2.1.WindowSurface/: README.md
1.Drawing a triangle/1.2.Presentation/1.2.2.Swap chain/: README.md
1.Drawing a triangle/1.2.Presentation/1.2.3.Image views/: CMakeLists.txt
1.Drawing a triangle/1.2.Presentation/1.2.3.ImageViews/Source/: VkApp.cpp
1.Drawing a triangle/1.3.Graphics pipelinee basics/: CMakeLists.txt
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.1.Introduction/: README.md
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.2.Shader modules/: README.md
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.2.ShaderModules/: CMakeLists.txt
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.2.ShaderModules/Source/: VkApp.cpp  VkApp.h
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.3.Fixed functions/Source/: VkApp.h
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.3.FixedFunctions/: CMakeLists.txt  README.md
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.4.Render passes/: CMakeLists.txt
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.4.Render passes/Source/: Main.cpp
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.4.RenderPasses/: README.md
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.4.RenderPasses/Source/: VkApp.cpp
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.5.Conclusion/: CMakeLists.txt  README.md
1.Drawing a triangle/1.3.Graphics pipelinee basics/1.3.5.Conclusion/Source/: VkApp.cpp  VkApp.h
1.Drawing a triangle/1.4.Drawing/: CMakeLists.txt
1.Drawing a triangle/1.4.Drawing/1.4.1.Framebuffers/: CMakeLists.txt  README.md
1.Drawing a triangle/1.4.Drawing/1.4.1.Framebuffers/Source/: VkApp.cpp  VkApp.h
1.Drawing a triangle/1.4.Drawing/1.4.2.Command buffers/: CMakeLists.txt
1.Drawing a triangle/1.4.Drawing/1.4.2.Command buffers/Source/: Utils.cpp
1.Drawing a triangle/1.4.Drawing/1.4.2.CommandBuffers/: README.md
1.Drawing a triangle/1.4.Drawing/1.4.2.CommandBuffers/Source/: VkApp.h
1.Drawing a triangle/1.4.Drawing/1.4.3.Rendering and presentation/: CMakeLists.txt  README.md
1.Drawing a triangle/1.4.Drawing/1.4.3.Rendering and presentation/Source/: Utils.h
1.Drawing a triangle/1.4.Drawing/1.4.3.RenderingAndPresentation/: README.md
1.Drawing a triangle/1.4.Drawing/1.4.3.RenderingAndPresentation/Shader/: shader.vert
1.Drawing a triangle/1.4.Drawing/1.4.3.RenderingAndPresentation/Source/: VkApp.cpp  VkApp.h
1.Drawing a triangle/1.4.Drawing/1.4.4.Frames in flight/: CMakeLists.txt
1.Drawing a triangle/1.4.Drawing/1.4.4.Frames in flight/Source/: VkApp.h
1.Drawing a triangle/1.4.Drawing/1.4.4.FramesInFlight/: README.md
1.Drawing a triangle/1.4.Drawing/1.4.4.FramesInFlight/Source/: VkApp.cpp  VkApp.h
1.Drawing a triangle/1.5.Swap chain recreation/: CMakeLists.txt  README.md
1.Drawing a triangle/1.5.Swap chain recreation/Source/: VkApp.cpp  VkApp.h
1.DrawingATriangle/04.PhysicalDevicesAndQueueFamilies/Source/: VkApp.cpp
2.1.Vertex input description/: CMakeLists.txt
2.1.Vertex input description/Source/: VkApp.h
2.2.Vertex buffer creation/: CMakeLists.txt
2.2.Vertex buffer creation/Source/: VkApp.cpp
2.3.Staging buffer/: CMakeLists.txt
2.4.Index buffer/: CMakeLists.txt
2.4.Index buffer/Source/: Vertex.h  VkApp.cpp  VkApp.h
2.Vertex buffers/: CMakeLists.txt
2.Vertex buffers/2.1.Vertex input description/: CMakeLists.txt  README.md
2.Vertex buffers/2.2.Vertex buffer creation/: CMakeLists.txt  README.md
2.Vertex buffers/2.2.Vertex buffer creation/Source/: VkApp.cpp  VkApp.h
2.Vertex buffers/2.3.Staging buffer/: CMakeLists.txt  README.md
2.Vertex buffers/2.3.Staging buffer/Source/: VkApp.h
2.Vertex buffers/2.4.Index buffer/: CMakeLists.txt  README.md
2.Vertex buffers/2.4.Index buffer/Source/: VkApp.cpp
3.Uniform buffers/: CMakeLists.txt
3.Uniform buffers/3.1.Descriptor layout and buffer/: CMakeLists.txt  README.md
3.Uniform buffers/3.1.Descriptor layout and buffer/Shader/: shader.vert
3.Uniform buffers/3.1.Descriptor layout and buffer/Source/: VkApp.cpp  VkApp.h
3.Uniform buffers/3.2.Descriptor pool and sets/: CMakeLists.txt  README.md
3.Uniform buffers/3.2.Descriptor pool and sets/Source/: VkApp.cpp  VkApp.h
Script/: Build.bat  CompileShader.py  GenerateProjectFiles.bat
(+20 files in other folders)
