cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(PROJECT_NAME "1.3.2.ShaderModules")
set(PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(PROJECT_SOURCE_PATH "${PROJECT_PATH}/Source")
set(PROJECT_SHADER_PATH "${PROJECT_PATH}/Shader")

file(GLOB_RECURSE PROJECT_SOURCE_FILE "${PROJECT_SOURCE_PATH}/**")
file(GLOB_RECURSE PROJECT_SHADER_FILE "${PROJECT_SHADER_PATH}/**")

add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_FILE} ${PROJECT_SHADER_FILE})

target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_PATH} ${Vulkan_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC Vulkan::Vulkan glfw glm stb)

set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

source_group(TREE "${PROJECT_SOURCE_PATH}" PREFIX "Source" FILES ${PROJECT_SOURCE_FILE})
source_group(TREE "${PROJECT_SHADER_PATH}" PREFIX "Shader" FILES ${PROJECT_SHADER_FILE})

set(SHADER_COMPILE_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/../../../Script/CompileShader.py")
foreach (SHADER_SOURCE_FILE IN LISTS PROJECT_SHADER_FILE)
    add_custom_command(
        TARGET ${PROJECT_NAME}
        POST_BUILD
        COMMAND python "${SHADER_COMPILE_SCRIPT}" --target="${SHADER_SOURCE_FILE}" --output="${CMAKE_CURRENT_SOURCE_DIR}/spir-v"
    )
endforeach()